# alpineer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  pypi_publish.yml  test.yml
src/alpineer/: io_utils.py  load_utils.py  misc_utils.py
src/tmi/: io_utils.py  load_utils.py  misc_utils.py  settings.py  test_utils.py  tiff_utils.py
tests/: data_utils_test.py  image_utils_test.py  io_utils_test.py  load_utils_test.py  misc_utils_test.py  tiff_utils_test.py
