[tool.poetry]
name = "tmi"
version = "0.1.0"
description = "Toolbox for Multiplexed Imaging. Contains scripts and little tools which are used throughout ark-analysis, mibi-bin-tools, and toffy."
authors = [
    "Noah Frey Greenwald <nfgreen@stanford.edu>",
    "Adam Kagel <ackagel@stanford.edu>",
    "Alex Kong <alkong@stanford.edu>",
    "Cami Laura Sowers <csowers@stanford.edu>",
    "Sricharan Reddy Varra <srivarra@stanford.edu>"
]
license = "Modified Apache 2.0"
homepage = "https://github.com/angelolab/tmi"
repository = "https://github.com/angelolab/tmi"
documentation = "https://tmi.readthedocs.io"
readme = "README.md"
packages = [
    { include = 'tmi', from = 'src' },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
natsort = "^8.2.0"
tifffile = "^2022.10.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coveralls = "^3.3.1"
pytest-cases = "^3.6.13"
pytest-order = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-pycodestyle = "^2.3.0"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## TYPE CHECKING ##

[tool.mypy]
python_version="3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

## LINTING, FORMATTING ##

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
preview = true

[tool.isort]
py_version=38
profile = "black"
line_length = 100
multi_line_output = 3

## COVERAGE ##

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tmi"]

[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
ignore_errors = false
fail_under = 45
omit = ["**/*test*.py"]

## TESTING ##

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "-s",
    "--cov",
    "--pycodestyle",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
testpaths = ["tests"]
norecursedirs = ["tests/utilities"]
